--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "async": "^0.9.0",
-    "chai": "^1.9.1"
+    "chai": "^1.9.1",
+    "socket.io-client": "~1.0.6"
   }
 }
