--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "version": "0.0.0",
-  "private": true,
-  "name": "appbasejs-compact",
-  "devDependencies": {
-    "karma": "^0.12.16",
-    "karma-firefox-launcher": "~0.1",
-    "karma-mocha": "^0.1.6",
-    "http-server": "^0.6.1",
-    "bower": "^1.3.1"
+  "version": "0.2.0",
+  "name": "appbasejs",
+  "dependencies": {
+    "socket.io-client": "~1.0.6",
+    "xhr2": "^0.1.0"
   },
-  "scripts": {
-    "postinstall": "bower install",
-
-    "prestart": "npm install",
-    "start": "http-server -a 0.0.0.0 -p 8000",
-
-    "pretest": "npm install",
-    "test": "node node_modules/karma/bin/karma start test/karma.conf.js",
-    "test-single-run": "node node_modules/karma/bin/karma start test/karma.conf.js  --single-run"
-  }
+  "author": "Appbase (http://appbase.io)",
+  "main": "lib/main.js",
+  "devDependencies": {
+    "socket.io-client": "~1.0.6",
+    "xhr2": "^0.1.0",
+    "async": "^0.9.0",
+    "mocha": "^1.21.5",
+    "chai": "^1.9.2"
+  },
+  "scripts":{"test": "mocha --check-leaks"}
 }
