--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gulp": "^3.8.8",
     "gulp-uglify": "^1.0.1",
     "browserify": "^6.1.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "oauth-js": "git://github.com/oauth-io/oauth-js"
   },
   "scripts": {
     "test": "mocha --check-leaks",
