--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.2.5",
+  "version": "2.2.6",
   "name": "appbasejs",
   "dependencies": {
     "socket.io-client": "~1.0.6",
@@ -18,11 +18,15 @@
     "gulp-uglify": "^1.0.1",
     "browserify": "^6.1.0",
     "gulp-rename": "^1.2.0",
-    "oauth-js": "git://github.com/oauth-io/oauth-js"
+    "oauth-js": "git://github.com/oauth-io/oauth-js",
+    "gulp-insert": "^0.4.0"
   },
   "scripts": {
     "test": "mocha --check-leaks --timeout 5000",
     "build": "gulp build",
     "test_build": "gulp build_for_test"
+  },
+  "browser": {
+    "xhr2": false
   }
 }
